Adding authentication on all route
