# routes/publisherRoutes.js
@@ -8,11 +8,17 @@ const auth = require('../middleware/auth'); // Import the auth middleware
  * /publishers/:
  * get:
  * summary: Get all publishers
+ * security:
+ * - bearerAuth: []
  * responses:
  * 200:
  * description: A list of publishers
+ * 401:
+ * description: unauthorized
+ * 500:
+ * description: server error
  */
-publisherRouter.get('/',auth ,controller.getPublishers);
+publisherRouter.get('/', auth, controller.getPublishers);
 
 /**
  * @swagger
@@ -26,13 +32,19 @@ publisherRouter.get('/',auth ,controller.getPublishers);
  * schema:
  * type: string
  * description: The publisher ID
+ * security:
+ * - bearerAuth: []
  * responses:
  * 200:
  * description: The publisher with its books
  * 404:
  * description: Publisher not found
+ * 401:
+ * description: unauthorized
+ * 500:
+ * description: server error
  */
-publisherRouter.get('/:id/books',auth, controller.getPublisherByIdWithBooks);
+publisherRouter.get('/:id/books', auth, controller.getPublisherByIdWithBooks);
 
 /**
  * @swagger
@@ -46,19 +58,27 @@ publisherRouter.get('/:id/books',auth, controller.getPublisherByIdWithBooks);
  * schema:
  * type: string
  * description: The publisher ID
+ * security:
+ * - bearerAuth: []
  * responses:
  * 200:
  * description: The publisher object
  * 404:
  * description: Publisher not found
+ * 401:
+ * description: unauthorized
+ * 500:
+ * description: server error
  */
-publisherRouter.get('/:id',auth, controller.getPublisherById);
+publisherRouter.get('/:id', auth, controller.getPublisherById);
 
 /**
  * @swagger
  * /publishers/:
  * post:
  * summary: Create a new publisher
+ * security:
+ * - bearerAuth: []
  * requestBody:
  * required: true
  * content:
@@ -70,6 +90,10 @@ publisherRouter.get('/:id',auth, controller.getPublisherById);
  * description: The created publisher
  * 400:
  * description: Validation error
+ * 401:
+ * description: unauthorized
+ * 500:
+ * description: server error
  */
 publisherRouter.post('/', auth, controller.addPublisherValidationRules, controller.addPublisher);
 
@@ -85,6 +109,8 @@ publisherRouter.post('/', auth, controller.addPublisherValidationRules, controll
  * schema:
  * type: string
  * description: The publisher ID
+ * security:
+ * - bearerAuth: []
  * requestBody:
  * required: true
  * content:
@@ -98,8 +124,12 @@ publisherRouter.post('/', auth, controller.addPublisherValidationRules, controll
  * description: Validation error
  * 404:
  * description: Publisher not found
+ * 401:
+ * description: unauthorized
+ * 500:
+ * description: server error
  */
-publisherRouter.put('/:id',auth,  controller.updatePublisherValidationRules, controller.updatePublisher);
+publisherRouter.put('/:id', auth, controller.updatePublisherValidationRules, controller.updatePublisher);
 
 /**
  * @swagger
@@ -113,11 +143,17 @@ publisherRouter.put('/:id',auth,  controller.updatePublisherValidationRules, con
  * schema:
  * type: string
  * description: The publisher ID
+ * security:
+ * - bearerAuth: []
  * responses:
  * 200:
  * description: Publisher deleted
  * 404:
  * description: Publisher not found
+ * 401:
+ * description: unauthorized
+ * 500:
+ * description: server error
  */
 publisherRouter.delete('/:id', auth, controller.deletePublisher);
 
